<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.MainActivity"
    android:id="@+id/constraintLayoutDownloadPage"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/iv_high_convert_thumbnail"
        android:layout_width="480dp"
        android:layout_height="360dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="205dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_high_convert_thumbnail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/tv_download_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="top|center_horizontal"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorError"
            android:visibility="invisible"
            android:text="@string/search_error" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/download_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="32dp"
        android:indeterminate="true"
        android:visibility="invisible" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_vid_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_high_convert_thumbnail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/video_listen"
        android:backgroundTint="@color/gray"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_convert_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_vid_listen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/convert_youtube_video"
        android:backgroundTint="@color/gray"
        android:textColor="@android:color/black"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/custom_song_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_convert_vid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/custom_song_hint"
        android:textColorHint="@color/purple_200"
        android:backgroundTint="@color/gray"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"/>






</androidx.constraintlayout.widget.ConstraintLayout>